# NPTrackingTools

./: CMakeLists.txt  README.md
BiiGOptitrackControl/: CMakeLists.txt
BiiGOptitrackControl/CMake/: BiiGOptitrackControlConfig.cmake.in  Config.h.in
BiiGOptitrackControl/include/: BiiGOptitrackControl.h  ExtraDefinitions.h  OptitrackHelpers.h  OptitrackMacros.h  OptitrackTool.h  OptitrackTracker.h
BiiGOptitrackControl/install/: Documentation_StateMachine.pptx  InternalLibrary_info.md
BiiGOptitrackControl/source/: OptitrackHelpers.cpp  OptitrackTool.cpp  OptitrackTracker.cpp
CMake/: FindCMakeAll.cmake  Launcher.cmake
CalibrationValidation/: CMakeLists.txt
CalibrationValidation/doc/: CameraCorrespondenceAPI-TrackingTools.txt
CalibrationValidation/python/: CalibrationTest.ui  CalibrationValidation.py
CalibrationValidation/source/: Test2DCameraProjections.cpp  TestCameraPairs.cpp  source.cpp
CameraValidation/: CMakeLists.txt
CameraValidation/source/: Test2DCameraProjections.cpp  Test2DCameraProjections.h  TestCameraPairs.cpp  TestCameraPairs.h  source.cpp
Laubrary/: CMakeLists.txt
Laubrary/CMake/: Config.h.in  Findtinyxml2.cmake
Laubrary/doc/: Documentation_StateMachine.pptx  Doxyfile.in
Laubrary/include/: ExampleTinyXML2.h  IGSTKlike.h  Laubrary.h  OptitrackMacros.h  OptitrackTool.h  OptitrackTracker.h
Laubrary/source/: Laubrary.cpp  OptitrackTool.cpp  OptitrackTracker.cpp
NPTrackingTools/: CMakeLists.txt  NPTrackingToolsFakeConfiguration.cmake
NPTrackingTools/CMake/: Config.h.in  FindTrackingToolsAPI.cmake
NPTrackingTools/CMake/NPTrackingTools/: NPTrackingTools-targets-debug.cmake.in  NPTrackingTools-targets-minsizerel.cmake.in  NPTrackingTools-targets-release.cmake.in  NPTrackingTools-targets-relwithdebinfo.cmake.in  NPTrackingTools-targets.cmake.in  NPTrackingToolsConfig.cmake.in
NPTrackingTools/doc/: CMakeLists.txt
NPTrackingTools/include/: NPTrackingTools.h  trackablesettings.h
NPTrackingTools/python/: TEST.py
NPTrackingTools/python/NPTrackingTools/: NPTrackingTools.py.in  __init__.py
NPTrackingTools/source/: NPTrackingTools.cpp
NPTrackingToolsFake/: CMakeLists.txt
NPTrackingToolsFake/include/: NPTrackingTools.h
NPTrackingToolsFake/source/: NPTrackingTools.cpp
OptitrackClient/: CMakeLists.txt
OptitrackClient/CMake/: Config.h.in
OptitrackClient/include/: OptitrackClient.h
OptitrackClient/source/: OptitrackClient.cpp  OptitrackClientMainCommandLine.cpp
OptitrackServer/: CMakeLists.txt
OptitrackServer/CMake/: FindOpenIGTLink.cmake
OptitrackServer/include/: OptitrackServer.h
OptitrackServer/source/: OptitrackServer.cpp  OptitrackServerMainCommandLine.cpp
OptitrackServerController/: CMakeLists.txt  CMakeLists.txtOLD
OptitrackServerController/CMake/: FindOpenIGTLink.cmake
OptitrackServerController/include/: Header.h
OptitrackServerController/source/: OptitrackServerController.cpp  OptitrackServerController.cppOLD
Projects/: BiiGOptitrackControl.cmake  CalibrationValidation.cmake  CameraValidation.cmake  Doxygen.cmake  Git.cmake  IGTLinkPython.cmake  ITK.cmake  ITK.patch  Laubrary.cmake  NPTrackingTools.cmake  OpenIGTLink.cmake  OptitrackClient.cmake  OptitrackServer.cmake  OptitrackServerController.cmake  Python.cmake  Qt.cmake  TestOptitrack.cmake  tinyXML2.cmake  tinyxml2.cmake
Projects/Patches/: ITK.patch
TestOptitrack/: CMakeLists.txt
TestOptitrack/source/: source.cpp
